- Level 5 Ruin Platforms/Corridor
- Fixxed Rat collider/animation/rotation
- collapsed platforms

#21.08.2024
- Monkey Sculpt Fire Effect
- Sound Effect Fire Throw
- Function Monkey Sculpt Danger

#26.08.2024
- Sky / Background Thunder
- Teleporter Warp Effect
- Level 5 - Bonuslevel prototyp
- Fixxed Rain indoor
- Changed blinking Bonustext to 8x (3 times full text)

#31.08.2024
- Orginal Bonus Text

#02.09.2024
- bonus level finish
- wumpa collect animation in bonus round
- wumpa_counter-10,wumpa+10 if wumpa_bonus > 50 to reduce lagg and entity spam
- fixxed changed fly direction after enemie explosions hit
- ruin background assets
- fixxed wumpa position reset

#04.09.2024
- Gem Shining noob edition

#05.09.2024
- fixxed AkuAku invincible in danger zones and hit by enemies
- AkuAku invincible destroys enemie,crates and collect wumpas in range < .5
- AkuAku floats while player is idle
- Level 4 Fixxed Falling Zone
- GemPlatforms reflect light effect
- LoadingScreen Displays Level Name below main text
- orginal crate counter font

#06.09.2024
- orginal live counter font
- orginal extra live icon
- Gorilla NPC
- Level 5 - New Background Objects

#10.09.2024
- fixxed npc collider

#11.09.2024
- improved physics (gravity)
- fixxed crashs fall animation
- fixxed shadow-point over fruits

#15.09.2024
- improved physics and object/landing process
- fixxed crashs jump animation
- fixxed nitro collision
- orginal crate counter icon
- extra live animation dont display in bonus

#18.09.2024
- Level Selector
- Remember collectables

#19.09.2024
- UI Sound Effect up/down/enter

#21.09.2024
- Game Over Screen: Restart / Quit Game
- fixxed aku sparkle on start
- Gorilla Logs fly away by attack
- fixxed multible akuaku music

#26.09.2024
- save game / load game
- wumpa fruits on level 3
- waterfall fixxed water foam

#28.09.2024
- replaced level 1 gem path to 3d
- changed camera follow, removed cam switches
- warp room crash animation wait
- shadow point fixx
- changed physics