@@ -5,8 +5,8 @@ app=Ursina(title='Crash Bandicoot',icon='res/cb.ico',vsync=False)
 def game():
 	settings.load()
 	ui.LoadingScreen()
-	warproom.level_select()
-	#dev_start(1)
+	#warproom.level_select()
+	dev_start(6)
 
 def dev_start(idx):
 	import status,level
