@@ -1,1 +1,1 @@
-{"SV_WU": 6, "SV_LF": 14, "SV_CR": 3, "SV_CG": 1, "SV_CL": 1, "SV_AK": 1, "LS_CR": [1, 2, 3], "LS_CL": [2], "LS_CG": [4, 5]}
+{"SV_WU": 23, "SV_LF": 9, "SV_CR": 3, "SV_CG": 3, "SV_CL": 0, "SV_AK": 1, "LS_CR": [1, 3, 2], "LS_CL": [], "LS_CG": [4, 5, 1]}
