@@ -7,13 +7,11 @@ mc='res/ui/icon/memcard.png'
 fn='res/ui/font.ttf'
 cu=camera.ui
 q='quad'
-class MemorycardSave(Entity):
+class Memorycard(Entity):
 	def __init__(self):
 		super().__init__(model=q,texture=mc,position=(.6,.24),scale=(.07,.1),parent=camera.ui)
 		self.desc_s=Text('Save Game - F2',font=fn,scale=1.5,position=(self.x-.1,self.y-.07,self.z),color=color.green,parent=cu)
 		self.desc_l=Text('Load Game - F3',font=fn,scale=1.5,position=(self.x-.1,self.y-.12,self.z),color=color.azure,parent=cu)
-#	def update(self):
-#		print(self)
 
 class LvSelect(Entity):
 	def __init__(self):
@@ -53,7 +51,7 @@ def level_select():
 	camera.rotation=(0,0,0)
 	scene.fog_density=(100,200)
 	objects.PseudoCrash()
-	MemorycardSave()
+	Memorycard()
 	LvSelect()
 	for lvs in [1,2,3,4,5]:
 		ui.LevelInfo(idx=lvs,pos=(-.8,.5-lvs/6))
